add oracle dialect